test/suites/fail-check/001.expected
  × One or more errors occured.

Error: T-002

  × The following terms are not equal:
  │   1: a
  │   2: b
  │ 
   ╭─[001.pol:6:21]
 5 │ codef ConvertAny(a: Type, b: Type): Fun(a, b) {
 6 │     .ap(a, b, x) => x
   ·                     ┬
   ·                     ╰── While elaborating
 7 │ }
   ╰────
