test/suites/fail-check/001.pol
codata Fun(a: Type, b: Type) {
    Fun(a, b).ap(a: Type, b: Type, x: a) : b
}

codef ConvertAny(a: Type, b: Type): Fun(a, b) {
    .ap(a, b, x) => x
}
